welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value go
go(){
^DwarfCode:2: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:9: error: not found: value stop
stop(){
^DwarfCode:10: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:18: error: not found: value sortie
sortie(){
^DwarfCode:28: error: not found: value go
    go()
    ^DwarfCode:29: error: not found: value stop
    stop()
    ^