welcome.lessons.welcome.summative.Moria.scala.code
go(){
  droite(2)
  while(!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
}

stop(){
  droite(2)
  while(!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
}

sortie(){
  droite()
  avance()
  gauche()
  avance()
}


def moria(){
  while(!estFaceMur()){
    go()
    stop()
  }
}